--- a/chat_window_style.css
+++ b/chat_window_style.css
@@ -29,9 +29,10 @@
   display: flex;
   align-items: center;
   position: fixed;
-  right: 50px;
+  left: 50px;
   bottom: 50px;
   z-index: 99;
+  flex-direction: row-reverse;
 }
 
 .chat-window .start-button-text {
@@ -79,7 +80,7 @@
 .chat-window .chat-popup {
   visibility: hidden;
   bottom: 0px;
-  right: 0px;
+  left: 0px;
   z-index: 999;
   flex-direction: column;
   position: fixed;
@@ -157,7 +158,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #2e4bc9;
+  background-color: #15552b;
   color: #fafafa;
   padding: 0.5rem;
   border-radius: 5px;
@@ -189,6 +190,7 @@
   display: flex;
   align-items: center;
   border: 1px solid #cccccc;
+  flex-direction: row-reverse;
   border-right: none;
   border-left: none;
 }
@@ -201,8 +203,13 @@
   align-items: center;
   border-radius: 5px;
   opacity: 0.7;
-  position: absolute;
-  right: -27px;
+  position: relative;
+  left: -24px;
+}
+
+.chat-window .send-icon {
+  font-size: 1.6rem;
+  color: #15552b;
 }
 
 .chat-window .start-button-image-container:hover,
@@ -211,15 +218,14 @@
   opacity: 1;
 }
 
-.chat-window .server-message-container { /*income-msg*/
+.chat-window .server-message-container { 
   display: flex;
-  left: 1.5rem;
-  right: 3rem;
+  justify-content: flex-end;
 }
 
-.chat-window .server-message { /*msg*/
+.chat-window .server-message {
   font-size: 14px;
-  background-color: #fafafa;
+  background-color: #80bd01;
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   padding-right: 1rem;
@@ -229,7 +235,6 @@
   text-align: justify;
   margin: 0.5rem;
   word-spacing: 0.15rem;
-  box-shadow: 0px 1px 4px #d3d3d3;
 }
 
 .chat-window .server-message-container .server-message p {
@@ -241,7 +246,6 @@
 
 .chat-window .user-message-container {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
 }
 
@@ -254,9 +258,8 @@
   padding-right: 1rem;
   padding-left: 1rem;
   border-radius: 2rem;
-  border-bottom-right-radius: 0px;
-  background-color: #2e4bc9;
-  color: white;
+  border-bottom-left-radius: 0px;
+  background-color: #e1e1e1;
   margin: 0.5rem;
   text-align: justify;
 }
@@ -377,11 +380,6 @@
 
 .w-toplink.pos_right.active {
   display: none;
-}
-
-.chat-window .send-icon {
-  font-size: 1.6rem;
-  color: #2e4bc9;
 }
 
 .chat-window .input-area-text,
