fixed chat window appearance

--- a/chat_window_style.css
+++ b/chat_window_style.css
@@ -231,7 +231,7 @@
   padding-right: 1rem;
   padding-left: 1rem;
   border-radius: 2rem;
-  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
   text-align: justify;
   margin: 0.5rem;
   word-spacing: 0.15rem;
