--- a/chat_window_style.css
+++ b/chat_window_style.css
@@ -60,6 +60,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.chat-window .start-button-image {
+  margin: 1rem;
+  height: 100%;
 }
 
 
@@ -125,7 +134,7 @@
 
 .chat-window .minimize-button-icon:hover,
 .chat-window .close-button-icon:hover {
-  color: #006cFA;
+  color: #15552b;
   background-color: #d7d7d7;
 }
 
@@ -275,10 +284,7 @@
   }
 }
 
-.chat-window .start-button-image {
-  width: 50px;
-  margin: 1rem;
-}
+
 
 .chat-window .diy-list-whole {
   display: flex;
