--- a/chat_window_style.css
+++ b/chat_window_style.css
@@ -213,7 +213,8 @@
   border-radius: 5px;
   opacity: 0.7;
   position: relative;
-  left: -24px;
+  left: 5px;
+  bottom: -30px;
 }
 
 .chat-window .send-icon {
@@ -278,9 +279,18 @@
   .chat-window .chat-popup,
   .chat-window .chat-area {
     bottom: 0vh;
-    right: 10%;
     width: 80vw;
     height: 80vh;
+    left: 10%;
+  }
+
+  .chat-window .start-button-container{
+    left: 10%;
+  }
+
+  .chat-window .start-button-image-container{
+    width: 200px;
+    height: 200px;
   }
 }
 
