--- a/chat_window_style.css
+++ b/chat_window_style.css
@@ -158,6 +158,18 @@
   justify-content: center;
 }
 
+.chat-window .chat-cover-video-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 300px;
+}
+
+.chat-window .chat-cover-video{
+  height: 100%;
+}
+
 .chat-window .chat-cover-text {
   font-size: larger;
   margin-bottom: 2rem;
@@ -173,6 +185,8 @@
   border-radius: 5px;
   cursor: not-allowed;
   opacity: 0.25;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 .chat-window .conditional-not-opaque-not-working-button{
@@ -450,6 +464,7 @@
 .chat-window .chat-cover-input-container{
   margin: 5px 0px;
   display: flex;
+  justify-content: center;
 }
 
 .dropdown {
