hides the scrollbar for the chat cover dropdown list

--- a/chat_window_style.css
+++ b/chat_window_style.css
@@ -157,7 +157,7 @@
   justify-content: center;
 }
 
-.chat-window .chat-cover-video-container{
+.chat-window .chat-cover-video-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -165,7 +165,7 @@
   height: 300px;
 }
 
-.chat-window #chat-cover-video{
+.chat-window #chat-cover-video {
   width: 200px;
 }
 
@@ -188,13 +188,13 @@
   margin-left: 30px;
 }
 
-.chat-window .conditional-not-opaque-not-working-button{
+.chat-window .conditional-not-opaque-not-working-button {
   transition: opacity 0.5s;
   cursor: pointer;
   opacity: 0.5;
 }
 
-.chat-window .conditional-not-opaque-not-working-button:hover{
+.chat-window .conditional-not-opaque-not-working-button:hover {
   opacity: 1;
 }
 
@@ -241,7 +241,7 @@
   opacity: 1;
 }
 
-.chat-window .server-message-container { 
+.chat-window .server-message-container {
   display: flex;
   justify-content: flex-end;
 }
@@ -296,11 +296,11 @@
     left: 10%;
   }
 
-  .chat-window .start-button-container{
+  .chat-window .start-button-container {
     left: 10%;
   }
 
-  .chat-window .start-button-image-container{
+  .chat-window .start-button-image-container {
     width: 200px;
     height: 200px;
   }
@@ -459,7 +459,7 @@
   font-variation-settings: 'FILL' 1;
 }
 
-.chat-window .chat-cover-input-container{
+.chat-window .chat-cover-input-container {
   margin: 5px 0px;
   display: flex;
   justify-content: center;
@@ -496,6 +496,12 @@
   align-items: center;
   max-height: 75px;
   overflow-x: auto;
+  -ms-overflow-style: none; /* IE and Edge scrollbar hide*/
+  scrollbar-width: none; /* Firefox scrollbar hide*/
+}
+
+.chat-window .dropdown-menu::-webkit-scrollbar {
+  display: none; /* Chrome, Opera and Safari scrollbar hide*/
 }
 
 .chat-window .dropdown-menu.show {
@@ -514,12 +520,12 @@
 
 }
 
-#chat-cover-input-text{
+#chat-cover-input-text {
   border: 1px solid #ccc;
   padding: 2px;
 }
 
-#chat-cover-message-container{
+#chat-cover-message-container {
   position: absolute;
   display: flex;
   align-items: center;
@@ -528,17 +534,17 @@
   z-index: 1;
 }
 
-#chat-cover-wait-message{
+#chat-cover-wait-message {
   position: absolute;
   margin: 5px;
 }
 
-#chat-cover-close-message{
+#chat-cover-close-message {
   display: flex;
   flex-direction: column;
   padding-bottom: 48px;
 }
 
-#chat-cover-close-message span{
+#chat-cover-close-message span {
   font-size: 48px;
 }
