Added functionality for inserting a two button "menu" in the chat interface. The buttons can be inserted from the backend, with custom text and the possibility of disabling any freeflowing text input from the user, only permitting them to click one of the buttons to continue in the chat. Chat interface menu buttons are disabled after any of the buttons in the group they are in, are clicked. Also, added a feature that allows signaling to the websocket server, without emitting a clientMessage. This feature currently only allows transmitting the type of person the chat user represents

--- a/source/chat_window_style.css
+++ b/source/chat_window_style.css
@@ -359,7 +359,7 @@
   width: 100%;
 }
 
-.chat-window .contenedor-menu-YorN {
+.chat-window .contenedor-menu-AorB {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 8px;
@@ -381,12 +381,13 @@
   cursor: pointer;
 }
 
-.chat-window .contenedor-btn-si,
-.chat-window .contenedor-btn-no,
-.chat-window .contenedor-btn-agente {
+.chat-window .contenedor-boton{
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #e8e8e8;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 .chat-window .btn-si,
